@@ -7,6 +7,8 @@ import example.domain.model.employee.ContractingEmployees;
 import example.domain.model.employee.Employee;
 import example.domain.model.employee.EmployeeNumber;
 import example.domain.model.timerecord.evaluation.TimeRecord;
+import example.domain.model.timerecord.evaluation.WeeklyTimeRecord;
+import example.domain.model.timerecord.evaluation.WeeklyTimeRecords;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -21,6 +23,7 @@ import org.springframework.web.servlet.ModelAndView;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
@@ -62,7 +65,7 @@ class TimeRecordRegisterControllerTest {
     @Test
     void 登録できる() throws Exception {
         when(timeRecordRepository.findTimeRecords(any(), any()))
-                .thenReturn(new TimeRecords(Collections.emptyList()));
+                .thenReturn(new WeeklyTimeRecords(Collections.emptyList()));
         doNothing().when(timeRecordRepository).registerTimeRecord(any());
 
         mockMvc.perform(post("/timerecord")
@@ -99,14 +102,16 @@ class TimeRecordRegisterControllerTest {
     })
     @ParameterizedTest
     void validation(String workDate, String startHour, String startMinute, String endHour, String endMinute, String daytimeBreakTime, String nightBreakTime, String errorField) throws Exception {
+        TimeRecords timeRecords = new TimeRecords(Arrays.asList(
+                new TimeRecord(
+                        new EmployeeNumber(1),
+                        AttendanceForm.toActualWorkDateTime("2019-01-01", "9:00", "33:00", "0", "0")),
+                new TimeRecord(
+                        new EmployeeNumber(1),
+                        AttendanceForm.toActualWorkDateTime("2019-01-03", "9:00", "21:00", "0", "0"))));
+
         when(timeRecordRepository.findTimeRecords(any(), any()))
-                .thenReturn(new TimeRecords(Arrays.asList(
-                        new TimeRecord(
-                                new EmployeeNumber(1),
-                                AttendanceForm.toActualWorkDateTime("2019-01-01", "9:00", "33:00", "0", "0")),
-                        new TimeRecord(
-                                new EmployeeNumber(1),
-                                AttendanceForm.toActualWorkDateTime("2019-01-03", "9:00", "21:00", "0", "0")))));
+                .thenReturn(new WeeklyTimeRecords(List.of(new WeeklyTimeRecord(timeRecords))));
 
         mockMvc.perform(post("/timerecord")
                 .param("employeeNumber", "1")
@@ -127,7 +132,7 @@ class TimeRecordRegisterControllerTest {
     void 日跨ぎが登録できる() throws Exception {
         doNothing().when(timeRecordRepository).registerTimeRecord(any());
         when(timeRecordRepository.findTimeRecords(any(), any()))
-                .thenReturn(new TimeRecords(Collections.emptyList()));
+                .thenReturn(new WeeklyTimeRecords(Collections.emptyList()));
 
         mockMvc.perform(post("/timerecord")
                 .param("employeeNumber", "1")
@@ -144,12 +149,14 @@ class TimeRecordRegisterControllerTest {
 
     @Test
     void 日跨ぎを表示すると24時を超える() throws Exception {
+        TimeRecords timeRecords = new TimeRecords(Arrays.asList(
+                new TimeRecord(
+                        new EmployeeNumber(1),
+                        AttendanceForm.toActualWorkDateTime("2011-11-11", "9:00", "28:00", "0", "0"))));
+
         when(employeeRepository.choose(any())).thenReturn(new Employee(new EmployeeNumber(1), null, null, null));
         when(timeRecordRepository.findTimeRecords(any(), any()))
-                .thenReturn(new TimeRecords(Arrays.asList(
-                        new TimeRecord(
-                                new EmployeeNumber(1),
-                                AttendanceForm.toActualWorkDateTime("2011-11-11", "9:00", "28:00", "0", "0")))));
+                .thenReturn(new WeeklyTimeRecords(List.of(new WeeklyTimeRecord(timeRecords))));
 
         MvcResult mvcResult = mockMvc.perform(
                 get("/timerecord")
